libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__nested_generics.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Nested generic arguments
expression: "Result<Option<T>, E>"
info:
  kind: Ok
---
Path#4294967040@15 (rooted: false)
  PathSegment#4294967040@14 (name: Result)
    GenericArgument#4294967040@9
      Type#4294967040@8
        TypeKind (Path)
          Path#4294967040@8 (rooted: false)
            PathSegment#4294967040@7 (name: Option)
              GenericArgument#4294967040@6
                Type#4294967040@5
                  TypeKind (Path)
                    Path#4294967040@5 (rooted: false)
                      PathSegment#4294967040@4 (name: T)
    GenericArgument#4294967040@13
      Type#4294967040@12
        TypeKind (Path)
          Path#4294967040@12 (rooted: false)
            PathSegment#4294967040@11 (name: E)
