libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__path_trailing_separator.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Path with trailing separator
expression: "foo::"
info:
  kind: Err
---
foo::
   ^
