libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__rooted_multi_segment.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Rooted multi-segment path
expression: "::foo::bar"
info:
  kind: Ok
---
Path#4294967040@5 (rooted: true)
  PathSegment#4294967040@2 (name: foo)
  PathSegment#4294967040@4 (name: bar)
