libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__rooted_path.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Rooted path
expression: "::foo"
info:
  kind: Ok
---
Path#4294967040@3 (rooted: true)
  PathSegment#4294967040@2 (name: foo)
