libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__simple_identifier.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Simple identifier path
expression: foo
info:
  kind: Ok
---
Path#4294967040@3 (rooted: false)
  PathSegment#4294967040@2 (name: foo)
