libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__single_generic.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Single generic argument
expression: Vec<T>
info:
  kind: Ok
---
Path#4294967040@7 (rooted: false)
  PathSegment#4294967040@6 (name: Vec)
    GenericArgument#4294967040@5
      Type#4294967040@4
        TypeKind (Path)
          Path#4294967040@4 (rooted: false)
            PathSegment#4294967040@3 (name: T)
