libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__unclosed_generic.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Unclosed generic argument
expression: Vec<T
info:
  kind: Err
---
Vec<T
   ^
